# gixstools

./: CITATION.cff  CONTRIBUTING.md  GIXS.poni  README.md  build-install-test.bat  detector.h5  inc-build-install-test.ps1  install.ps1  pyproject.toml  setup.py
docs/: requirements.txt
docs/_static/: references.bib
docs/source/: align.rst  conf.py  detector.rst  index.rst  installation.rst  references.bib  usage.rst  wedge.rst
gixstools/: __init__.py  config.py  default_config.toml  programs.py  style.mplstyle
gixstools/_programs/: admin.py  macro.py  plot.py  transform.py
gixstools/align/: __init__.py  macro.py  specular.py
gixstools/detector/: __init__.py  detector.py  load_raw.py  stitcher.py
gixstools/wedge/: __init__.py  poni.py  transform.c  transformer.py
tests/: installation.py  macro.py  run_tests.py  test_beamfinder.py  test_installation.py  test_macro.py  test_programs.py  test_stitch.py  transform_c_vs_py.py
tests/macro-test-dump/: Incident_angle_tuning_macro-20250415-16.txt  Specular_om_macro-20250530-17.txt  Specular_om_macro-master.txt  Specular_z_macro-20250415-16.txt  Specular_z_macro-20250530-17.txt  Specular_z_macro-master.txt
