[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gixstools"
version = "0.0.104"
description = "Python package to quickly transform images from grazing incidence X-ray experiments using C"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Teddy Tortorici", email = "edward.tortorici@colorado.edu" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.0",
    "pyFAI>=2025.3",
    "fabio>=2024",
    "matplotlib>=3.10",
    "ipykernel",
    "ipympl",
]
requires-python = ">=3.13"

[project.scripts]
transform = "gixstools._programs.transform:transform"
scan-macro = "gixstools._programs.macro:scan_macro"
new-config = "gixstools._programs.admin:new_config"
clear-config = "gixstools._programs.admin:clear_config"
new-user = "gixstools._programs.admin:new_user"
save-config = "gixstools._programs.admin:save_config"
load-config = "gixstools._programs.admin:load_config"
move-scan = "gixstools._programs.admin:move_scan"
clear-scan = "gixstools._programs.admin:clear_scan"


# gixs-stitch = "gixstools._programs:stitch"

[project.urls]
Repository = "https://github.com/ttortorici/gixstools"
Issues = "https://github.com/ttortorici/gixstools/issues"

[tool.setuptools]
packages = ["gixstools", "gixstools.wedge", "gixstools.align", "gixstools.detector", "gixstools._programs"]
include-package-data = true

[tool.setuptools.package-data]
gixstools = ["style.mplstyle", "default_config.toml"]
